# YA-OpenCC-API

./: Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-image.yaml
